force-app/main/default/objects/Contact/fields/Activite_actuelle__c.field-meta.xml
<CustomField>
    <fullName>Activite_actuelle__c</fullName>
    <label>Activité actuelle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
                <label>Au chômage ayant déjà travaillé</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Exerce une activité</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>À la rechercher d&apos;un 1er emploi</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Retraite ou pré-retraite</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Congé maternité</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Congé parental</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Maladie longue durée</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Femme ou homme au foyer</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Autre cas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>