force-app/main/default/objects/Contact/fields/Age_de_fin_d_etude__c.field-meta.xml
<CustomField>
    <fullName>Age_de_fin_d_etude__c</fullName>
    <label>Age de fin d&apos;étude</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>