force-app/main/default/objects/Contact/fields/Autre_activite__c.field-meta.xml
<CustomField>
    <fullName>Autre_activite__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Autre activité</label>
    <length>255</length>
    <type>Text</type>
</CustomField>