force-app/main/default/objects/Contact/fields/Canal_privilegie__c.field-meta.xml
<CustomField>
    <fullName>Canal_privilegie__c</fullName>
    <label>Canal privilégié</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fixe du foyer</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>