force-app/main/default/objects/Contact/fields/CGU__c.field-meta.xml
<CustomField>
    <fullName>CGU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CGU</label>
    <type>Checkbox</type>
</CustomField>