force-app/main/default/objects/Contact/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Ouvrier non qualifié</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Ouvrier qualifié</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Employé</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Technicien</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Agent de maîtrise</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Cadre</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>NSP/Refus</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>