force-app/main/default/objects/Contact/fields/Code_profession__c.field-meta.xml
<CustomField>
    <fullName>Code_profession__c</fullName>
    <label>Code profession</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>