force-app/main/default/objects/Contact/fields/CON_ExtId_SIPanel__c.field-meta.xml
<CustomField>
    <fullName>CON_ExtId_SIPanel__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>CON_ExtId_SIPanel</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>