force-app/main/default/objects/Contact/fields/Consommation_Video_sur_Ordinateur__c.field-meta.xml
<CustomField>
    <fullName>Consommation_Video_sur_Ordinateur__c</fullName>
    <label>Consommation Vidéo sur Ordinateur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7</fullName>
                <label>NSP/Refus</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Jamais</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Presque tous les jours</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Tous les jours</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>1 à 2 fois par semaine</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>1 à 3 fois par mois</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Moins souvent</label>
            </value>
            <value>
                <fullName>Non réponse</fullName>
                <isActive>false</isActive>
                <label>Non réponse</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>