force-app/main/default/objects/Contact/fields/Contact_principal__c.field-meta.xml
<CustomField>
    <fullName>Contact_principal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Principal</label>
    <type>Checkbox</type>
</CustomField>