force-app/main/default/objects/Contact/fields/CSP42__c.field-meta.xml
<CustomField>
    <fullName>CSP42__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Code profession CSP42</label>
    <length>18</length>
    <type>Text</type>
</CustomField>