force-app/main/default/objects/Contact/fields/CSP4__c.field-meta.xml
<CustomField>
    <fullName>CSP4__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Code profession CSP4</label>
    <length>18</length>
    <type>Text</type>
</CustomField>