force-app/main/default/objects/Contact/fields/Date_d_entree_individu__c.field-meta.xml
<CustomField>
    <fullName>Date_d_entree_individu__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date d&apos;entrée individu</label>
    <type>Date</type>
</CustomField>