force-app/main/default/objects/Contact/fields/Date_de_chute_individu__c.field-meta.xml
<CustomField>
    <fullName>Date_de_chute_individu__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de chute individu</label>
    <type>Date</type>
</CustomField>