force-app/main/default/objects/Contact/fields/Date_de_derni_re_commande__c.field-meta.xml
<CustomField>
    <fullName>Date_de_derni_re_commande__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de dernière commande</label>
    <type>Date</type>
</CustomField>