force-app/main/default/objects/Contact/fields/Date_de_suppression__c.field-meta.xml
<CustomField>
    <fullName>Date_de_suppression__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de suppression</label>
    <type>Date</type>
</CustomField>