force-app/main/default/objects/Contact/fields/Date_de_synchronisation_Google__c.field-meta.xml
<CustomField>
    <fullName>Date_de_synchronisation_Google__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de synchronisation Google</label>
    <type>Date</type>
</CustomField>