force-app/main/default/objects/Contact/fields/Dernier_diplome_obtenu__c.field-meta.xml
<CustomField>
    <fullName>Dernier_diplome_obtenu__c</fullName>
    <label>Dernier diplôme obtenu</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4</fullName>
                <label>CAP</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>BEP</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Supérieur à BAC+2</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>BAC+2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>BAC, Brevet de Technicien, Brevet de Maîtrise</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>BEPC</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Certificat d&apos;études</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Pas de diplôme</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Autre</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>NSP/Refus</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>