force-app/main/default/objects/Contact/fields/Domaine_d_activite__c.field-meta.xml
<CustomField>
    <fullName>Domaine_d_activite__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Domaine d&apos;activité</label>
    <length>255</length>
    <type>Text</type>
</CustomField>