force-app/main/default/objects/Contact/fields/Freeze__c.field-meta.xml
<CustomField>
    <fullName>Freeze__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freeze</label>
    <type>Checkbox</type>
</CustomField>