force-app/main/default/objects/Contact/fields/Frequence_de_connexion_mobile__c.field-meta.xml
<CustomField>
    <fullName>Frequence_de_connexion_mobile__c</fullName>
    <label>Fréquence de connexion mobile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequence_d_utilisation</valueSetName>
    </valueSet>
</CustomField>