force-app/main/default/objects/Contact/fields/Id_google__c.field-meta.xml
<CustomField>
    <fullName>Id_google__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>ID Google</label>
    <length>255</length>
    <type>Text</type>
</CustomField>