force-app/main/default/objects/Contact/fields/Individu_Count__c.field-meta.xml
<CustomField>
    <fullName>Individu_Count__c</fullName>
    <label>Individu Count</label>
    <summaryForeignKey>Individu_Paneliste__c.Composition_du_foyer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>