force-app/main/default/objects/Contact/fields/Lien_de_parente_stat__c.field-meta.xml
<CustomField>
    <fullName>Lien_de_parente_stat__c</fullName>
    <label>Lien de parenté stat</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Couple</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Parent</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Enfant</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Famille</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Isolé</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>