force-app/main/default/objects/Contact/fields/Lien_meter__c.field-meta.xml
<CustomField>
    <fullName>Lien_meter__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Lien meter</label>
    <type>Url</type>
</CustomField>