force-app/main/default/objects/Contact/fields/Lien_parente__c.field-meta.xml
<CustomField>
    <fullName>Lien_parente__c</fullName>
    <label>Lien parenté</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Chef de famille</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Conjoint</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Enfant</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Ascendant</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Autre</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>