force-app/main/default/objects/Contact/fields/Mail_support__c.field-meta.xml
<CustomField>
    <fullName>Mail_support__c</fullName>
    <formula>IF(
TEXT(Account.Type_de_foyer__c) = $Label.ACC_Type_de_panel_Mediamat,
				$Label.MAIL_support_mediamat,


IF(
								TEXT(Account.Type_de_foyer__c) = $Label.ACC_Type_de_panel_Pame,
								$Label.MAIL_support_pame,


IF(
TEXT(Account.Type_de_foyer__c) = $Label.ACC_Type_de_panel_AIP, $Label.MAIL_support_aip,

								&quot;&quot;
				)
)
)</formula>
    <label>Mail support</label>
    <type>Text</type>
</CustomField>