force-app/main/default/objects/Contact/fields/Niveau_d_etude_en_cours__c.field-meta.xml
<CustomField>
    <fullName>Niveau_d_etude_en_cours__c</fullName>
    <label>Niveau d&apos;étude en cours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Ecole maternelle</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Ecole primaire</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Collège d&apos;enseignement général</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Lycée professionnel ou technique</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Lycée d&apos;enseignement général</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Etab. sup. de niveau BAC à BAC+2</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Etab. sup. au delà de BAC+2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>