force-app/main/default/objects/Contact/fields/Nombre_d_heures_travaillees__c.field-meta.xml
<CustomField>
    <fullName>Nombre_d_heures_travaillees__c</fullName>
    <label>Nombre d&apos;heures travaillées</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>