force-app/main/default/objects/Contact/fields/Nombre_de_mois_d_anciennet__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_mois_d_anciennet__c</fullName>
    <label>Nombre de mois d&apos;ancienneté</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>