force-app/main/default/objects/Contact/fields/Nombre_de_points_debites__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_points_debites__c</fullName>
    <label>Nombre de points débités</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>