force-app/main/default/objects/Contact/fields/Nombre_de_salaries__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_salaries__c</fullName>
    <label>Nombre de salariés</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Moins de 3 salariés</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>de 3 à 9 salariés</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>10 salariés ou plus</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>