force-app/main/default/objects/Contact/fields/Numero_Paneliste_Foyer__c.field-meta.xml
<CustomField>
    <fullName>Numero_Paneliste_Foyer__c</fullName>
    <description>Récupération du numéro du foyer sans la mention entre parenthèse</description>
    <formula>IF(
				FIND(&quot; &quot;, Account.Name) &gt; 0,
				LEFT(Account.Name, FIND(&quot; &quot;, Account.Name)),
				Account.Name
)</formula>
    <label>Numéro Panéliste Foyer</label>
    <type>Text</type>
</CustomField>