force-app/main/default/objects/Contact/fields/NumeroSelonPanel__c.field-meta.xml
<CustomField>
    <fullName>NumeroSelonPanel__c</fullName>
    <formula>IF(  TEXT(Account.Type_de_foyer__c)  == $Label.ACC_Type_de_panel_Mediamat , $Label.NumeroMediamat ,

IF( TEXT(Account.Type_de_foyer__c) == $Label.ACC_Type_de_panel_Pame, $Label.NumeroPame,

IF( TEXT(Account.Type_de_foyer__c) == $Label.ACC_Type_de_panel_AIP, $Label.NumeroAip,

&apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NuméroSelonPanel</label>
    <type>Text</type>
</CustomField>