force-app/main/default/objects/Contact/fields/Personne_de_Reference__c.field-meta.xml
<CustomField>
    <fullName>Personne_de_Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personne de Référence</label>
    <type>Checkbox</type>
</CustomField>