force-app/main/default/objects/Contact/fields/Presence_permanente__c.field-meta.xml
<CustomField>
    <fullName>Presence_permanente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Présence permanente</label>
    <type>Checkbox</type>
</CustomField>