force-app/main/default/objects/Contact/fields/R_f_rentiel_convention__c.field-meta.xml
<CustomField>
    <fullName>R_f_rentiel_convention__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Référentiel convention</label>
    <referenceTo>Referentiel_convention__c</referenceTo>
    <relationshipLabel>Composition des foyers</relationshipLabel>
    <relationshipName>Composition_des_foyers</relationshipName>
    <type>Lookup</type>
</CustomField>