force-app/main/default/objects/Contact/fields/Routeur__c.field-meta.xml
<CustomField>
    <fullName>Routeur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Routeur</label>
    <type>Checkbox</type>
</CustomField>