force-app/main/default/objects/Contact/fields/Secteur_d_activite__c.field-meta.xml
<CustomField>
    <fullName>Secteur_d_activite__c</fullName>
    <label>Secteur d&apos;activité</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Etat ou collectivité locale</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Entreprise privée</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>