force-app/main/default/objects/Contact/fields/Sexe__c.field-meta.xml
<CustomField>
    <fullName>Sexe__c</fullName>
    <label>Sexe</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>M</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>F</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>