force-app/main/default/objects/Contact/fields/Signature_convention_individuelle_meter__c.field-meta.xml
<CustomField>
    <fullName>Signature_convention_individuelle_meter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Signature convention individuelle Meter</label>
    <type>Date</type>
</CustomField>