force-app/main/default/objects/Contact/fields/Statut_individu__c.field-meta.xml
<CustomField>
    <fullName>Statut_individu__c</fullName>
    <label>Statut de l&apos;individu</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Présent</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Vacancier</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Absent</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Inactif</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Ne fait plus partie du panel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>