force-app/main/default/objects/Contact/fields/TECH_IndividuChute__c.field-meta.xml
<CustomField>
    <fullName>TECH_IndividuChute__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH_IndividuChute</label>
    <type>Checkbox</type>
</CustomField>