force-app/main/default/objects/Contact/fields/Tech_lettre_MAJ__c.field-meta.xml
<CustomField>
    <fullName>Tech_lettre_MAJ__c</fullName>
    <defaultValue>1</defaultValue>
    <description>champ tech mis à jour par le flux individupan_updatecontact_techfield permettant de savoir quand l&apos;enfant ind pan a été mis à jour dans le traitement de classe AP02_MembreDuFoyer</description>
    <label>Tech_lettre_MAJ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>