force-app/main/default/objects/Contact/fields/Temps_plein__c.field-meta.xml
<CustomField>
    <fullName>Temps_plein__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temps plein</label>
    <type>Checkbox</type>
</CustomField>