force-app/main/default/objects/Contact/fields/Tv__c.field-meta.xml
<CustomField>
    <fullName>Tv__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tv</label>
    <type>Checkbox</type>
</CustomField>