force-app/main/default/objects/Contact/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Membre</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>Invité</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Non panéliste</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>