force-app/main/default/objects/Contact/fields/Type_d_emploi__c.field-meta.xml
<CustomField>
    <fullName>Type_d_emploi__c</fullName>
    <label>Type d&apos;emploi</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Salarié</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>À son compte</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>