force-app/main/default/objects/Contact/recordTypes/Mediamat.recordType-meta.xml
<RecordType>
    <fullName>Mediamat</fullName>
    <active>true</active>
    <label>Mediamat</label>
</RecordType>