force-app/main/default/objects/Contact/recordTypes/mediamat_non_equipe.recordType-meta.xml
<RecordType>
    <fullName>mediamat_non_equipe</fullName>
    <active>true</active>
    <label>Mediamat non équipé</label>
</RecordType>