force-app/main/default/objects/Contact/recordTypes/PaME.recordType-meta.xml
<RecordType>
    <fullName>PaME</fullName>
    <active>true</active>
    <label>PaME</label>
</RecordType>