force-app/main/default/objects/Contact/recordTypes/pame_non_equipe.recordType-meta.xml
<RecordType>
    <fullName>pame_non_equipe</fullName>
    <active>true</active>
    <label>PaME non équipé</label>
</RecordType>