force-app/main/default/objects/Contact/recordTypes/Type_d_enregistrement_principal.recordType-meta.xml
<RecordType>
    <fullName>Type_d_enregistrement_principal</fullName>
    <active>true</active>
    <label>Type d&apos;enregistrement principal</label>
</RecordType>