force-app/main/default/objects/Contact/validationRules/RV01_verification_longueur_telephone.validationRule-meta.xml
<ValidationRule>
    <fullName>RV01_verification_longueur_telephone</fullName>
    <active>true</active>
    <description>Règle qui vérifie que les champs de téléphone ont un certain nombre de caractère</description>
    <errorConditionFormula>AND(
				$User.Bypass_validation_rules__c = false,
				NOT(ISBLANK(MobilePhone)),
				LEN(MobilePhone) &lt;&gt; VALUE($Label.RV_Limitation_telephone)
)</errorConditionFormula>
    <errorMessage>Le numéro de téléphone doit obligatoirement être composé de 10 chiffres</errorMessage>
</ValidationRule>